<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/editTextStyle"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/til_username" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/btn_sign_up"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        />
    <include layout="@layout/loading" />
</androidx.constraintlayout.widget.ConstraintLayout>